# shears-cli

./: .travis.yml  Cargo.toml  readme.md
.github/workflows/: main.yml
src/: args.rs  cli.rs  gitlab.rs  http.rs  main.rs  util.rs
