[package]
name = "branch-cut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.0"
serde = { version = "1.0.160" , features = ["derive"]}
toml = "0.7.3"
clap = { version = "4.3.0", features = ["derive"]}
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = "1.0.96"
anyhow = "1.0.71"
cherry-picker = "0.1.0"
