[package]
name = "shears"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160" , features = ["derive"]}
clap = { version = "4.3.19", features = ["derive"]}
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = "1.0.96"
anyhow = "1.0.71"
